# telewaves

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: build-and-push-image.yaml
telewaves/: __init__.py  __main__.py  configuration.py  constants.py  service.py
